templates/v2/04-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw1
  namespace: api-gateway
  annotations:
    networking.istio.io/service-type: ClusterIP
  labels:
    kuadrant.io/gateway: "true"
spec:
  gatewayClassName: openshift-default
  listeners:
  - name: api
    hostname: "*.gw1.apps.cluster-jsn9w.dynamic2.redhatworkshops.io"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: api-gw1-tls
