templates/v2/07-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pong
  namespace: tests
  labels:
    deployment: pong
spec:
  parentRefs:
  - name: gw1
    namespace: api-gateway
  hostnames:
  - "pong.gw1.apps.cluster-jsn9w.dynamic2.redhatworkshops.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: pong
      port: 8080
